Final Final Final(?)

--- a/Week 2 Assignment.ipynb
+++ b/Week 2 Assignment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "90d97fad-6858-432d-bd77-3d738baf0b29",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "aac662cf",
    "metadata": {},
    "outputs": [],
@@ -100,10 +100,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dfb35f88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost matrix:\n",
+      "[[ 13.  10.  22.  29.  18.   0.]\n",
+      " [ 14.  13.  16.  21. 999.   0.]\n",
+      " [  3.   0. 999.  11.   6.   0.]\n",
+      " [ 18.   9.  19.  23.  11.   0.]\n",
+      " [ 30.  24.  34.  36.  28.   0.]]\n",
+      "Supply: [5, 6, 7, 4, 3]\n",
+      "Demand: [3, 5, 4, 5, 6, 2]\n",
+      "Set parameter LogToConsole to value 0\n",
+      "Model has 30 variables, 11 constraints and 60 nonzeros\n",
+      "\n",
+      "Flow[0,0] =   3.00\n",
+      "Flow[0,1] =   2.00\n",
+      "Flow[1,2] =   4.00\n",
+      "Flow[1,3] =   2.00\n",
+      "Flow[2,1] =   3.00\n",
+      "Flow[2,3] =   3.00\n",
+      "Flow[2,4] =   1.00\n",
+      "Flow[3,4] =   4.00\n",
+      "Flow[4,4] =   1.00\n",
+      "Flow[4,5] =   2.00\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -114,12 +142,25 @@
     "a = pd.read_excel(\"Transportation.xlsx\", sheet_name = 'Example', header = None, skiprows = 1, nrows = m, usecols = 'G').values.flatten().tolist()\n",
     "b = pd.read_excel(\"Transportation.xlsx\", sheet_name = 'Example', header = None, skiprows = m+1, nrows = 1, usecols = 'B:F').values.tolist()[0]\n",
     "\n",
-    "### Adjust the parameters in order to have a balanced problem that can be solved with TransportationModel()\n",
+    "### Adjust the parameters in order to have a balanced problem that can be solved with TransportationModel()\\\n",
+    "###########################ADDED##################################################################################\n",
     "\n",
+    "c = np.array(c) \n",
     "\n",
+    "total_supply = sum(a)\n",
+    "total_demand = sum(b)\n",
     "\n",
+    "if total_supply > total_demand: #case 1\n",
+    "    diff = total_supply - total_demand\n",
+    "    b.append(diff)\n",
+    "    c = np.hstack([c, np.zeros((c.shape[0], 1))])\n",
     "\n",
+    "elif total_demand > total_supply: #case 2\n",
+    "    diff = total_demand - total_supply\n",
+    "    a.append(diff)\n",
+    "    c = np.vstack([c, np.zeros((1, c.shape[1]))])\n",
     "\n",
+    "#####################################################################################################################\n",
     "\n",
     "\n",
     "print(\"Cost matrix:\")\n",
@@ -155,10 +196,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d211ce57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PB's on the four events\n",
+      "[[63.91 74.86 54.6  69.96  0.  ]\n",
+      " [58.65 90.89 54.48 64.26  0.  ]\n",
+      " [59.62 81.14 55.99 58.1   0.  ]\n",
+      " [65.56 89.02 54.57 58.71  0.  ]\n",
+      " [63.25 72.05 53.24 59.3   0.  ]\n",
+      " [79.77 66.92 68.3  74.43  0.  ]\n",
+      " [75.37 69.75 54.05 59.12  0.  ]\n",
+      " [69.76 69.19 58.29 62.64  0.  ]\n",
+      " [70.44 83.23 55.47 64.38  0.  ]\n",
+      " [64.7  76.5  55.69 62.21  0.  ]\n",
+      " [68.24 83.03 55.35 64.75  0.  ]\n",
+      " [65.94 89.48 55.83 65.19  0.  ]\n",
+      " [61.35 74.5  58.33 60.44  0.  ]]\n",
+      "Supply: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]   Demand [1, 1, 1, 1, 9]\n",
+      "Model has 65 variables, 18 constraints and 130 nonzeros\n",
+      "\n",
+      "Gurobi Optimizer version 13.0.0 build v13.0.0rc1 (win64 - Windows 11+.0 (26200.2))\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) Ultra 5 245K, instruction set [SSE2|AVX|AVX2]\n",
+      "Thread count: 14 physical cores, 14 logical processors, using up to 14 threads\n",
+      "\n",
+      "Optimize a model with 18 rows, 65 columns and 130 nonzeros (Min)\n",
+      "Model fingerprint: 0x6c3ee5a4\n",
+      "Model has 52 linear objective coefficients\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
+      "  Objective range  [5e+01, 9e+01]\n",
+      "  Bounds range     [0e+00, 0e+00]\n",
+      "  RHS range        [1e+00, 9e+00]\n",
+      "Presolve time: 0.00s\n",
+      "Presolved: 18 rows, 65 columns, 130 nonzeros\n",
+      "\n",
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0    0.0000000e+00   8.000000e+00   0.000000e+00      0s\n",
+      "       4    2.3691000e+02   0.000000e+00   0.000000e+00      0s\n",
+      "\n",
+      "Solved in 4 iterations and 0.00 seconds (0.00 work units)\n",
+      "Optimal objective  2.369100000e+02\n",
+      "Swimmer  2   on event 1   PR = 58.65\n",
+      "Swimmer  6   on event 2   PR = 66.92\n",
+      "Swimmer  5   on event 3   PR = 53.24\n",
+      "Swimmer  3   on event 4   PR = 58.1\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
@@ -197,11 +288,218 @@
     "#    if abs(var.x) > 1e-6: # only printing non-zeros\n",
     "#        print('{0} = {1:6.2f}'.format(var.VarName[:18], var.x))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "205e6f9c",
+   "metadata": {},
+   "source": [
+    "Mens team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b8093c98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PB's on the four events\n",
+      "[[ 70.45  57.8   53.74  54.74   0.  ]\n",
+      " [ 68.65  83.2   49.42  55.02   0.  ]\n",
+      " [ 56.95  87.53  48.99  55.71   0.  ]\n",
+      " [ 58.16  63.4   48.53  60.46   0.  ]\n",
+      " [ 65.92  66.33  50.48  53.16   0.  ]\n",
+      " [ 55.48  74.3   48.86  51.41   0.  ]\n",
+      " [ 56.88 115.    49.67  61.39   0.  ]\n",
+      " [ 59.44 102.84  49.68  55.25   0.  ]\n",
+      " [ 64.67  70.7   49.78  53.68   0.  ]\n",
+      " [ 59.66  66.92  53.93  55.27   0.  ]]\n",
+      "Supply: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]   Demand [1, 1, 1, 1, 6]\n",
+      "Model has 50 variables, 15 constraints and 100 nonzeros\n",
+      "\n",
+      "Gurobi Optimizer version 13.0.0 build v13.0.0rc1 (win64 - Windows 11+.0 (26200.2))\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) Ultra 5 245K, instruction set [SSE2|AVX|AVX2]\n",
+      "Thread count: 14 physical cores, 14 logical processors, using up to 14 threads\n",
+      "\n",
+      "Optimize a model with 15 rows, 50 columns and 100 nonzeros (Min)\n",
+      "Model fingerprint: 0x66304b39\n",
+      "Model has 40 linear objective coefficients\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
+      "  Objective range  [5e+01, 1e+02]\n",
+      "  Bounds range     [0e+00, 0e+00]\n",
+      "  RHS range        [1e+00, 6e+00]\n",
+      "Presolve time: 0.00s\n",
+      "Presolved: 15 rows, 50 columns, 100 nonzeros\n",
+      "\n",
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0    0.0000000e+00   8.000000e+00   0.000000e+00      0s\n",
+      "       5    2.1462000e+02   0.000000e+00   0.000000e+00      0s\n",
+      "\n",
+      "Solved in 5 iterations and 0.00 seconds (0.00 work units)\n",
+      "Optimal objective  2.146200000e+02\n",
+      "Swimmer  7   on event 1   PR = 56.88\n",
+      "Swimmer  1   on event 2   PR = 57.8\n",
+      "Swimmer  4   on event 3   PR = 48.53\n",
+      "Swimmer  6   on event 4   PR = 51.41\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = 10\n",
+    "n = 5\n",
+    "times = pd.read_excel(\"Transportation.xlsx\", sheet_name=\"Medley\", header=None, skiprows=20, nrows=m, usecols=\"B:E\").to_numpy()\n",
+    "\n",
+    "I = range(m)\n",
+    "J = range(4)\n",
+    "\n",
+    "a = [1 for i in range(m)]\n",
+    "b = [1 for i in range(n)]\n",
+    "b[n-1] = m - n + 1\n",
+    "\n",
+    "c = [[60*times[i][j].minute + times[i][j].second + times[i][j].microsecond/1e6 for j in range(n-1)] for i in range(m)]\n",
+    "[c[i].append(0) for i in range(m)]\n",
+    "c = np.array(c)\n",
+    "\n",
+    "print(\"PB's on the four events\")\n",
+    "print(c)\n",
+    "print(\"Supply:\", a, \"  Demand\", b)\n",
+    "\n",
+    "TP = TransportationModel(a, b, c)\n",
+    "print(f'Model has {TP.NumVars} variables, {TP.NumConstrs} constraints and {TP.NumNZs} nonzeros\\n')\n",
+    "\n",
+    "TP.optimize()\n",
+    "\n",
+    "for j in J:\n",
+    "    for i in I:\n",
+    "        xij = TP.getVarByName(f\"Flow[{i},{j}]\")\n",
+    "        if xij.x == 1:\n",
+    "            print(\"Swimmer {:2}   on event {}   PR = {}\".format(i+1, j+1, c[i,j]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a109d8d9",
+   "metadata": {},
+   "source": [
+    "Mixed Team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "eed3432b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PB's on the four events\n",
+      "[[ 63.91  74.86  54.6   69.96   0.  ]\n",
+      " [ 58.65  90.89  54.48  64.26   0.  ]\n",
+      " [ 59.62  81.14  55.99  58.1    0.  ]\n",
+      " [ 65.56  89.02  54.57  58.71   0.  ]\n",
+      " [ 63.25  72.05  53.24  59.3    0.  ]\n",
+      " [ 79.77  66.92  68.3   74.43   0.  ]\n",
+      " [ 75.37  69.75  54.05  59.12   0.  ]\n",
+      " [ 69.76  69.19  58.29  62.64   0.  ]\n",
+      " [ 70.44  83.23  55.47  64.38   0.  ]\n",
+      " [ 64.7   76.5   55.69  62.21   0.  ]\n",
+      " [ 68.24  83.03  55.35  64.75   0.  ]\n",
+      " [ 65.94  89.48  55.83  65.19   0.  ]\n",
+      " [ 61.35  74.5   58.33  60.44   0.  ]\n",
+      " [ 70.45  57.8   53.74  54.74   0.  ]\n",
+      " [ 68.65  83.2   49.42  55.02   0.  ]\n",
+      " [ 56.95  87.53  48.99  55.71   0.  ]\n",
+      " [ 58.16  63.4   48.53  60.46   0.  ]\n",
+      " [ 65.92  66.33  50.48  53.16   0.  ]\n",
+      " [ 55.48  74.3   48.86  51.41   0.  ]\n",
+      " [ 56.88 115.    49.67  61.39   0.  ]\n",
+      " [ 59.44 102.84  49.68  55.25   0.  ]\n",
+      " [ 64.67  70.7   49.78  53.68   0.  ]\n",
+      " [ 59.66  66.92  53.93  55.27   0.  ]]\n",
+      "Supply: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]   Demand [1, 1, 1, 1, 19]\n",
+      "Model has 115 variables, 28 constraints and 230 nonzeros\n",
+      "\n",
+      "Gurobi Optimizer version 13.0.0 build v13.0.0rc1 (win64 - Windows 11+.0 (26200.2))\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) Ultra 5 245K, instruction set [SSE2|AVX|AVX2]\n",
+      "Thread count: 14 physical cores, 14 logical processors, using up to 14 threads\n",
+      "\n",
+      "Optimize a model with 29 rows, 115 columns and 282 nonzeros (Min)\n",
+      "Model fingerprint: 0xc1f1610c\n",
+      "Model has 92 linear objective coefficients\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
+      "  Objective range  [5e+01, 1e+02]\n",
+      "  Bounds range     [0e+00, 0e+00]\n",
+      "  RHS range        [1e+00, 2e+01]\n",
+      "Presolve time: 0.00s\n",
+      "Presolved: 29 rows, 115 columns, 282 nonzeros\n",
+      "\n",
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0    0.0000000e+00   1.000000e+01   0.000000e+00      0s\n",
+      "       6    2.2110000e+02   0.000000e+00   0.000000e+00      0s\n",
+      "\n",
+      "Solved in 6 iterations and 0.00 seconds (0.00 work units)\n",
+      "Optimal objective  2.211000000e+02\n",
+      "Swimmer  2   on event 1   PR = 58.65\n",
+      "Swimmer 14   on event 2   PR = 57.8\n",
+      "Swimmer  5   on event 3   PR = 53.24\n",
+      "Swimmer 19   on event 4   PR = 51.41\n"
+     ]
+    }
+   ],
+   "source": [
+    "times_w = pd.read_excel(\"Transportation.xlsx\", sheet_name=\"Medley\", header=None, skiprows=4, nrows=13, usecols=\"B:E\").to_numpy()\n",
+    "times_m = pd.read_excel(\"Transportation.xlsx\", sheet_name=\"Medley\", header=None, skiprows=20, nrows=10, usecols=\"B:E\").to_numpy()\n",
+    "times = np.vstack([times_w, times_m])\n",
+    "\n",
+    "m = 23\n",
+    "n = 5\n",
+    "\n",
+    "I = range(m)\n",
+    "J = range(4)\n",
+    "\n",
+    "a = [1 for i in range(m)]\n",
+    "b = [1 for i in range(n)]\n",
+    "b[n-1] = m - n + 1\n",
+    "\n",
+    "c = [[60*times[i][j].minute + times[i][j].second + times[i][j].microsecond/1e6 for j in range(n-1)] for i in range(m)]\n",
+    "[c[i].append(0) for i in range(m)]\n",
+    "c = np.array(c)\n",
+    "\n",
+    "print(\"PB's on the four events\")\n",
+    "print(c)\n",
+    "print(\"Supply:\", a, \"  Demand\", b)\n",
+    "\n",
+    "TP = TransportationModel(a, b, c)\n",
+    "\n",
+    "TP.addConstr(\n",
+    "    sum(TP.getVarByName(f\"Flow[{i},{j}]\") for i in range(13) for j in range(4)) == 2\n",
+    ")\n",
+    "\n",
+    "print(f'Model has {TP.NumVars} variables, {TP.NumConstrs} constraints and {TP.NumNZs} nonzeros\\n')\n",
+    "\n",
+    "TP.optimize()\n",
+    "\n",
+    "for j in J:\n",
+    "    for i in I:\n",
+    "        xij = TP.getVarByName(f\"Flow[{i},{j}]\")\n",
+    "        if xij.x == 1:\n",
+    "            print(\"Swimmer {:2}   on event {}   PR = {}\".format(i+1, j+1, c[i,j]))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -215,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
