--- a/Week 2 Examples.ipynb
+++ b/Week 2 Examples.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aac662cf",
    "metadata": {},
    "outputs": [],
@@ -86,10 +86,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "39cbab9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Set parameter LicenseID to value 2766413\n",
+      "Academic license - for non-commercial use only - expires 2027-01-15\n",
+      "Set parameter LogToConsole to value 0\n",
+      "Model has 15 variables, 8 constraints and 30 nonzeros\n",
+      "\n",
+      "The optimal objective is 90\n",
+      "\n",
+      "VarName           |   value      c_ij    red.cost\n",
+      "Flow[0,0]         |   2.000      4.00       0.00\n",
+      "Flow[0,1]         |   3.000      3.00       0.00\n",
+      "Flow[0,2]         |   3.000      8.00       0.00\n",
+      "Flow[1,2]         |   2.000      6.00       0.00\n",
+      "Flow[1,3]         |   2.000      4.00       0.00\n",
+      "Flow[1,4]         |   1.000      5.00       0.00\n",
+      "Flow[2,4]         |   6.000      4.00       0.00\n",
+      "\n",
+      "ConstrName        |     RHS     Slack         Pi\n",
+      "Supply[0]         |    8.00      0.00       2.00\n",
+      "Supply[1]         |    5.00      0.00       0.00\n",
+      "Supply[2]         |    6.00      0.00      -1.00\n",
+      "Demand[0]         |    2.00      0.00       2.00\n",
+      "Demand[1]         |    3.00      0.00       1.00\n",
+      "Demand[2]         |    5.00      0.00       6.00\n",
+      "Demand[3]         |    2.00      0.00       4.00\n",
+      "Demand[4]         |    7.00      0.00       5.00\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -137,10 +170,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "77d55ee9-eec5-44cd-8536-6b49e58f3cd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2. 3. 3. 0. 0.]\n",
+      " [0. 0. 2. 2. 1.]\n",
+      " [0. 0. 0. 0. 6.]]\n",
+      "[ 2.  0. -1.] [2. 1. 6. 4. 5.]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from itertools import product\n",
@@ -156,6 +200,81 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7b451cf",
+   "metadata": {},
+   "source": [
+    "Q1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9e07501d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Non-basic variables (X ~ 0): 8\n",
+      "Flow[0,3] 1.0\n",
+      "Flow[0,4] 2.0\n",
+      "Flow[2,2] 2.0\n",
+      "Flow[2,3] 2.0\n",
+      "Flow[1,0] 4.0\n",
+      "Flow[1,1] 4.0\n",
+      "Flow[2,1] 4.0\n",
+      "Flow[2,0] 6.0\n",
+      "All non-negative: True\n",
+      "Any reduced cost ~ 0: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "nonbasic = [(v.VarName, v.RC, v.X) for v in TP.getVars() if abs(v.X) < 1e-9]\n",
+    "nonbasic_sorted = sorted(nonbasic, key=lambda t: t[1])\n",
+    "\n",
+    "print(\"Non-basic variables (X ~ 0):\", len(nonbasic_sorted))\n",
+    "for name, rc, xval in nonbasic_sorted:\n",
+    "    print(name, rc)\n",
+    "\n",
+    "rc_vals = [rc for _, rc, _ in nonbasic_sorted]\n",
+    "print(\"All non-negative:\", all(rc >= -1e-9 for rc in rc_vals))\n",
+    "print(\"Any reduced cost ~ 0:\", any(abs(rc) < 1e-9 for rc in rc_vals))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab5fb28a",
+   "metadata": {},
+   "source": [
+    "Q2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6cceb3f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Revenue: 90.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "constrs = TP.getConstrs()\n",
+    "rhs = [c.RHS for c in constrs]\n",
+    "pi = [c.Pi for c in constrs]\n",
+    "revenue = sum(r*p for r, p in zip(rhs, pi))\n",
+    "print(\"Revenue:\", revenue)"
    ]
   }
  ],
